--- a/index.html
+++ b/index.html
@@ -4,14 +4,186 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Resume Viktor Klimenko</title>
 </head>
 <body>
-  <h1>Title 1</h1>
-  <h2>Title 2</h2>
-  <h3>Title 3</h3>
-  <h4>Title 4</h4>
-  <h5>Title 5</h5>
-  <h6>Title 6</h6>
+  <!-- main section -->
+  <div>
+    <!-- main content section -->
+    <main>
+      <!-- about me section -->
+      <div>
+        <h2>
+          Front-End Developer
+        </h2>
+        <h1>
+          Viktor-Klimenko
+        </h1>
+        <p>
+          I've been learning programming for about a year from free sources. 
+
+        </p>
+      </div>
+
+      <!-- my projects section -->
+      <div>
+        <h3>Projects</h3>
+
+        <ol>
+          <li>
+            <a href="https://viktor-gif.github.io/react-creativia">https://viktor-gif.github.io/react-creativia</a>
+            <span>...............</span>
+            <span>[ ReactJS, HTML5, CSS3 ]</span>
+          </li>
+          <li>
+            <a href="https://viktor-gif.github.io/viktor-gif-react">https://viktor-gif.github.io/viktor-gif-react</a>
+            <span>...............</span>
+            <span>[ ReactJS ]</span>
+          </li>
+          <li>
+            <a href="https://viktor-gif.github.io/mogo">https://viktor-gif.github.io/mogo</a>
+            <span>...............</span>
+            <span>[ HTML5, CSS3 ]</span>
+          </li>
+        </ol>
+
+      </div>
+
+      <!-- my work experience -->
+      <div>
+        <h3>Work Experience</h3>
+        <!-- company 1 -->
+        <div>
+          <h4>Front-End Developer <span>Freelance</span></h4>
+          <p>September 2019 - up to now | Country</p>
+          <ul>
+            <li>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+              aliqua.
+            </li>
+            <li>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </li>
+            <li>
+              Risus commodo viverra maecenas.
+            </li>
+            <li>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.
+            </li>
+          </ul>
+        </div>
+        <!-- company 2 -->
+        <div>
+          <h4>Manager <span>Roga & Kopyta New</span></h4>
+          <p>March 2015 - October 2018 | Country</p>
+          <ul>
+            <li>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod labore et dolore magna aliqua.
+            </li>
+            <li>
+              Quis ipsum suspendisse ultrices gravida.
+            </li>
+            <li>
+              Risus commodo viverra maecenas.
+            </li>
+          </ul>
+        </div>
+        <!-- company 3 -->
+        <div>
+          <h4>Manager <span>Roga & Kopyta LLC</span></h4>
+          <p>June 2014 - February 2015 | Country</p>
+          <ul>
+            <li>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </li>
+            <li>
+              Quis ipsum suspendisse ultrices gravida.
+            </li>
+            <li>
+              Risus commodo viverra maecenas.
+            </li>
+          </ul>
+        </div>
+      </div>
+      <!-- my education -->
+      <div>
+        <h3>Education</h3>
+        <!-- education 1 -->
+        <div>
+          <h4>National University of Radioelectronics</h4>
+          <h5>Management</h5>
+          <p>September 2009 - June 2014   |   Country</p>
+        </div>
+      </div>
+    </main>
+
+    <!-- sidebar-section -->
+    <aside>
+      <img src="img/IMG-35f23ec5adbc4141560b42f517c93430-V.jpg">
+
+      <!-- contacts-section -->
+      <div>
+        <h3>Contacts</h3>
+        <div>
+          <span>C:</span>
+          <a href="tel:+3890961444250">+38 (096) 144 42 50</a>
+        </div>
+        <div>
+          <span>E:</span>
+          <a href="klim.viktor.ua@gmail.com">klim.viktor.ua@gmail.com</a>
+        </div>
+      </div>
+
+      <!-- tech skills -->
+      <div>
+        <h3>Tech Skills</h3>
+        <ul>
+          <li>
+            HTML5
+          </li>
+          <li>
+            CSS3
+          </li>
+          <li>
+            GIT
+          </li>
+          <li>
+            JavaScript
+          </li>
+          <li>
+            TypeScript
+          </li>
+          <li>
+            React.js
+          </li>
+          <li>
+            PHP
+          </li>
+          <li>
+            SQL
+          </li>
+        </ul>
+      </div>
+
+      <!-- soft skills -->
+      <div>
+        <h3>Soft Skills</h3>
+        <ul>
+          <li>
+            purposefulness
+          </li>
+          <li>
+            Agile
+          </li>
+          <li>
+            GTD
+          </li>
+          <li>
+            Teamwork
+          </li>
+        </ul>
+      </div>
+    </aside>
+  </div>
 </body>
 </html>
