Styles was complited

--- a/index.html
+++ b/index.html
@@ -21,37 +21,43 @@
     <main class="main_content">
       <!-- about me section -->
       <div class="about_me">
-        <h2>
+        <h2 class="about_me_profession">
           Front-End Developer
         </h2>
-        <h1>
+        <h1 class="about_me_name">
           Viktor-Klimenko
         </h1>
-        <p>
-          I've been learning programming for about a year from free sources. 
+        <p class="about_me_description">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit sint obcaecati dolores et cum, veritatis nemo culpa veniam ratione voluptatem sit eveniet expedita reiciendis fugit exercitationem illo praesentium fugiat molestias. 
 
         </p>
       </div>
 
       <!-- my projects section -->
       <div class="my_projects">
-        <h3>Projects</h3>
+        <h3 class="main_section_title">Projects</h3>
 
-        <ol>
-          <li>
-            <a href="https://viktor-gif.github.io/react-creativia">https://viktor-gif.github.io/react-creativia</a>
-            <span>.........................</span>
-            <span>[ ReactJS, HTML5, CSS3 ]</span>
+        <ol class="my_projects_list">
+          <li class="my_projects_item">
+            <span class="my_projects_text">
+            <a class="my_projects_link" href="https://viktor-gif.github.io/react-creativia">https://viktor-gif.github.io/react-creativia</a>
+            .........................
+            <span class="my_projects_bracket">[</span> ReactJS, HTML5, CSS3 <span class="my_projects_bracket">]</span>
+            </span>
           </li>
-          <li>
-            <a href="https://viktor-gif.github.io/viktor-gif-react">https://viktor-gif.github.io/viktor-gif-react</a>
-            <span>........................</span>
-            <span>[ ReactJS ]</span>
+          <li class="my_projects_item">
+            <span class="my_projects_text">
+            <a class="my_projects_link" href="https://viktor-gif.github.io/viktor-gif-react">https://viktor-gif.github.io/viktor-gif-react</a>
+            ........................
+            <span class="my_projects_bracket">[</span> ReactJS <span class="my_projects_bracket">]</span>
+            </span>
           </li>
-          <li>
-            <a href="https://viktor-gif.github.io/mogo">https://viktor-gif.github.io/mogo</a>
-            <span>.............................................</span>
-            <span>[ HTML5, CSS3 ]</span>
+          <li class="my_projects_item">
+            <span class="my_projects_text">
+            <a class="my_projects_link" href="https://viktor-gif.github.io/mogo">https://viktor-gif.github.io/mogo</a>
+            .............................................
+            <span class="my_projects_bracket">[</span> HTML5, CSS3 <span class="my_projects_bracket">]</span>
+            </span>
           </li>
         </ol>
 
@@ -59,68 +65,83 @@
 
       <!-- my work experience -->
       <div class="work_experience">
-        <h3>Work Experience</h3>
+        <h3 class="main_section_title">Work Experience</h3>
         <!-- company 1 -->
-        <div class="work_experience_item">
-          <h4>Front-End Developer <span>Freelance</span></h4>
-          <p>September 2019 - up to now | Country</p>
-          <ul>
-            <li>
+        <div class="work_experience_block">
+          <h4 class="work_experience_position">
+            Front-End Developer <span>Freelance</span>
+          </h4>
+          <p class="work_experience_period">
+            September 2019 - up to now <span>|</span> Country
+          </p>
+          <ul class="work_experience_duties">
+            <li class="work_experience_duty">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
               aliqua.
             </li>
-            <li>
+            <li class="work_experience_duty">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             </li>
-            <li>
+            <li class="work_experience_duty">
               Risus commodo viverra maecenas.
             </li>
-            <li>
+            <li class="work_experience_duty">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.
             </li>
           </ul>
         </div>
         <!-- company 2 -->
-        <div class="work_experience_item">
-          <h4>Manager <span>Roga & Kopyta New</span></h4>
-          <p>March 2015 - October 2018 | Country</p>
-          <ul>
-            <li>
+        <div class="work_experience_block">
+          <h4 class="work_experience_position">
+            Manager <span>Roga & Kopyta New</span>
+          </h4>
+          <p class="work_experience_period">
+            March 2015 - October 2018 <span>|</span> Country
+          </p>
+          <ul class="work_experience_duties">
+            <li class="work_experience_duty">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod labore et dolore magna aliqua.
             </li>
-            <li>
+            <li class="work_experience_duty">
               Quis ipsum suspendisse ultrices gravida.
             </li>
-            <li>
+            <li class="work_experience_duty">
               Risus commodo viverra maecenas.
             </li>
           </ul>
         </div>
         <!-- company 3 -->
-        <div class="work_experience_item">
-          <h4>Manager <span>Roga & Kopyta LLC</span></h4>
-          <p>June 2014 - February 2015 | Country</p>
-          <ul>
-            <li>
+        <div class="work_experience_block">
+          <h4 class="work_experience_position">
+            Manager <span>Roga & Kopyta LLC</span>
+          </h4>
+          <p class="work_experience_period">
+            June 2014 - February 2015 <span>|</span> Country
+          </p>
+          <ul class="work_experience_duties">
+            <li class="work_experience_duty">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             </li>
-            <li>
+            <li class="work_experience_duty">
               Quis ipsum suspendisse ultrices gravida.
             </li>
-            <li>
+            <li class="work_experience_duty">
               Risus commodo viverra maecenas.
             </li>
           </ul>
         </div>
       </div>
+
       <!-- my education -->
       <div class="my_education">
-        <h3>Education</h3>
+        <h3 class="main_section_title">Education</h3>
         <!-- education 1 -->
-        <div>
-          <h4>National University of Radioelectronics</h4>
-          <h5>Management</h5>
-          <p>September 2009 - June 2014   |   Country</p>
+        <div class="educational_institution">
+          <h4 class="educational_institution_name">National University of Radioelectronics</h4>
+          <h5 class="acquired_knowledge">Management</h5>
+          <p class="my_education_period">
+            September 2009 - June 2014 <span>|</span> Country
+          </p>
         </div>
       </div>
     </main>
