--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
           Viktor-Klimenko
         </h1>
         <p class="about_me_description">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit sint obcaecati dolores et cum, veritatis nemo culpa veniam ratione voluptatem sit eveniet expedita reiciendis fugit exercitationem illo praesentium fugiat molestias. 
-
+          I am self-taught, I have been actively studying for 2 years. 
+          I started to study because my public education does not suit me, 
+          I am attracted by it technologies. I can do a lot, I already have 
+          very good skills, I'm ready to get to work.
         </p>
       </div>
 
@@ -137,84 +139,93 @@
         <h3 class="main_section_title">Education</h3>
         <!-- education 1 -->
         <div class="educational_institution">
-          <h4 class="educational_institution_name">National University of Radioelectronics</h4>
-          <h5 class="acquired_knowledge">Management</h5>
+          <h4 class="educational_institution_name">National University of Internal Affairs</h4>
+          <h5 class="acquired_knowledge">Lawyer</h5>
           <p class="my_education_period">
-            September 2009 - June 2014 <span>|</span> Country
+            September 2008 - June 2014 <span>|</span> Ukraine
           </p>
         </div>
       </div>
     </main>
 
+    <div class="sidebar_avatar">
+      <img src="img/IMG-35f23ec5adbc4141560b42f517c93430-V.jpg">
+    </div>
+
     <!-- sidebar-section -->
     <aside class="sidebar">
-      <div class="sidebar_avatar">
-        <img src="img/IMG-35f23ec5adbc4141560b42f517c93430-V.jpg">
-      </div>
-
-      <!-- contacts-section -->
-      <div class="contacts_section">
-        <h3 class="sidebar_section_title">Contacts</h3>
-        <div>
-          <span class="contacts_section_type">C:</span>
-          <a class="contacts_section_link contacts_section_link_tel" href="tel:+3890961444250">+38 (096) 144 42 50</a>
+      <div class="sidebar_wrapper">
+        <div class="sidebar_info">
+          <!-- contacts-section -->
+          <div class="contacts_section">
+            <h3 class="sidebar_section_title">Contacts</h3>
+            <div>
+              <span class="contacts_section_type">C:</span>
+              <a class="contacts_section_link contacts_section_link_tel" href="tel:+3890961444250">+38 (096) 144 42 50</a>
+            </div>
+            <div>
+              <span class="contacts_section_type">E:</span>
+              <a class="contacts_section_link" href="klim.viktor.ua@gmail.com">klim.viktor.ua<wbr>@gmail.com</a>
+            </div>
+          </div>
+  
+          <!-- tech skills -->
+          <div class="tech_skills_sections">
+            <h3 class="sidebar_section_title">Tech Skills</h3>
+            <ul class="tech_skills_list">
+              <li class="tech_skills_item">
+                <span class="tech_skills_item_text">HTML5</span>
+              </li>
+              <li class="tech_skills_item">
+                <span class="tech_skills_item_text">CSS3</span>
+              </li>
+              <li class="tech_skills_item">
+                <span class="tech_skills_item_text">SASS</span>
+              </li>
+              <li class="tech_skills_item">
+                <span class="tech_skills_item_text">GIT</span>
+              </li>
+              <li class="tech_skills_item">
+                <span class="tech_skills_item_text">JavaScript</span>
+              </li>
+              <li class="tech_skills_item">
+                <span class="tech_skills_item_text">TypeScript</span>
+              </li>
+              <li class="tech_skills_item">
+                <span class="tech_skills_item_text">React.js</span>
+              </li>
+              <li class="tech_skills_item">
+                <span class="tech_skills_item_text">Webpack</span>
+              </li>
+              <li class="tech_skills_item">
+                <span class="tech_skills_item_text">PHP</span>
+              </li>
+              <li class="tech_skills_item">
+                <span class="tech_skills_item_text">SQL</span>
+              </li>
+            </ul>
+          </div>
+  
+          <!-- soft skills -->
+          <div class="sidebar_soft_skills">
+            <h3 class="sidebar_section_title">Soft Skills</h3>
+            <ul class="soft_skills_list">
+              <li class="soft_skills_item">
+                <span class="soft_skills_item_text">purposefulness</span>
+              </li>
+              <li class="soft_skills_item">
+                <span class="soft_skills_item_text">Agile</span>
+              </li>
+              <li class="soft_skills_item">
+                <span class="soft_skills_item_text">GTD</span>
+              </li>
+              <li class="soft_skills_item">
+                <span class="soft_skills_item_text">Teamwork</span>
+              </li>
+            </ul>
+          </div>
         </div>
-        <div>
-          <span class="contacts_section_type">E:</span>
-          <a class="contacts_section_link" href="klim.viktor.ua@gmail.com">klim.viktor.ua@gmail.com</a>
-        </div>
       </div>
-
-      <!-- tech skills -->
-      <div class="tech_skills_sections">
-        <h3 class="sidebar_section_title">Tech Skills</h3>
-        <ul class="tech_skills_list">
-          <li class="tech_skills_item">
-            <span class="tech_skills_item_text">HTML5</span>
-          </li>
-          <li class="tech_skills_item">
-            <span class="tech_skills_item_text">CSS3</span>
-          </li>
-          <li class="tech_skills_item">
-            <span class="tech_skills_item_text">GIT</span>
-          </li>
-          <li class="tech_skills_item">
-            <span class="tech_skills_item_text">JavaScript</span>
-          </li>
-          <li class="tech_skills_item">
-            <span class="tech_skills_item_text">TypeScript</span>
-          </li>
-          <li class="tech_skills_item">
-            <span class="tech_skills_item_text">React.js</span>
-          </li>
-          <li class="tech_skills_item">
-            <span class="tech_skills_item_text">PHP</span>
-          </li>
-          <li class="tech_skills_item">
-            <span class="tech_skills_item_text">SQL</span>
-          </li>
-        </ul>
-      </div>
-
-      <!-- soft skills -->
-      <div class="sidebar_soft_skills">
-        <h3 class="sidebar_section_title">Soft Skills</h3>
-        <ul class="soft_skills_list">
-          <li class="soft_skills_item">
-            <span class="soft_skills_item_text">purposefulness</span>
-          </li>
-          <li class="soft_skills_item">
-            <span class="soft_skills_item_text">Agile</span>
-          </li>
-          <li class="soft_skills_item">
-            <span class="soft_skills_item_text">GTD</span>
-          </li>
-          <li class="soft_skills_item">
-            <span class="soft_skills_item_text">Teamwork</span>
-          </li>
-        </ul>
-      </div>
-    
     </aside>
   </div>
 </body>
