--- a/index.html
+++ b/index.html
@@ -148,82 +148,80 @@
       </div>
     </main>
 
-    <div class="sidebar_avatar">
+    <div class="avatar">
       <img src="img/IMG-35f23ec5adbc4141560b42f517c93430-V.jpg">
     </div>
 
     <!-- sidebar-section -->
     <aside class="sidebar">
-      <div class="sidebar_wrapper">
-        <div class="sidebar_info">
-          <!-- contacts-section -->
-          <div class="contacts_section">
-            <h3 class="sidebar_section_title">Contacts</h3>
-            <div>
-              <span class="contacts_section_type">C:</span>
-              <a class="contacts_section_link contacts_section_link_tel" href="tel:+3890961444250">+38 (096) 144 42 50</a>
-            </div>
-            <div>
-              <span class="contacts_section_type">E:</span>
-              <a class="contacts_section_link" href="klim.viktor.ua@gmail.com">klim.viktor.ua<wbr>@gmail.com</a>
-            </div>
+      <div class="sidebar_info">
+        <!-- contacts-section -->
+        <div class="contacts_section">
+          <h3 class="sidebar_section_title">Contacts</h3>
+          <div>
+            <span class="contacts_section_type">C:</span>
+            <a class="contacts_section_link contacts_section_link_tel" href="tel:+3890961444250">+38 (096) 144 42 50</a>
           </div>
-  
-          <!-- tech skills -->
-          <div class="tech_skills_sections">
-            <h3 class="sidebar_section_title">Tech Skills</h3>
-            <ul class="tech_skills_list">
-              <li class="tech_skills_item">
-                <span class="tech_skills_item_text">HTML5</span>
-              </li>
-              <li class="tech_skills_item">
-                <span class="tech_skills_item_text">CSS3</span>
-              </li>
-              <li class="tech_skills_item">
-                <span class="tech_skills_item_text">SASS</span>
-              </li>
-              <li class="tech_skills_item">
-                <span class="tech_skills_item_text">GIT</span>
-              </li>
-              <li class="tech_skills_item">
-                <span class="tech_skills_item_text">JavaScript</span>
-              </li>
-              <li class="tech_skills_item">
-                <span class="tech_skills_item_text">TypeScript</span>
-              </li>
-              <li class="tech_skills_item">
-                <span class="tech_skills_item_text">React.js</span>
-              </li>
-              <li class="tech_skills_item">
-                <span class="tech_skills_item_text">Webpack</span>
-              </li>
-              <li class="tech_skills_item">
-                <span class="tech_skills_item_text">PHP</span>
-              </li>
-              <li class="tech_skills_item">
-                <span class="tech_skills_item_text">SQL</span>
-              </li>
-            </ul>
+          <div>
+            <span class="contacts_section_type">E:</span>
+            <a class="contacts_section_link" href="klim.viktor.ua@gmail.com">klim.viktor.ua<wbr>@gmail.com</a>
           </div>
-  
-          <!-- soft skills -->
-          <div class="sidebar_soft_skills">
-            <h3 class="sidebar_section_title">Soft Skills</h3>
-            <ul class="soft_skills_list">
-              <li class="soft_skills_item">
-                <span class="soft_skills_item_text">purposefulness</span>
-              </li>
-              <li class="soft_skills_item">
-                <span class="soft_skills_item_text">Agile</span>
-              </li>
-              <li class="soft_skills_item">
-                <span class="soft_skills_item_text">GTD</span>
-              </li>
-              <li class="soft_skills_item">
-                <span class="soft_skills_item_text">Teamwork</span>
-              </li>
-            </ul>
-          </div>
+        </div>
+
+        <!-- tech skills -->
+        <div class="tech_skills_sections">
+          <h3 class="sidebar_section_title">Tech Skills</h3>
+          <ul class="tech_skills_list">
+            <li class="tech_skills_item">
+              <span class="tech_skills_item_text">HTML5</span>
+            </li>
+            <li class="tech_skills_item">
+              <span class="tech_skills_item_text">CSS3</span>
+            </li>
+            <li class="tech_skills_item">
+              <span class="tech_skills_item_text">SASS</span>
+            </li>
+            <li class="tech_skills_item">
+              <span class="tech_skills_item_text">GIT</span>
+            </li>
+            <li class="tech_skills_item">
+              <span class="tech_skills_item_text">JavaScript</span>
+            </li>
+            <li class="tech_skills_item">
+              <span class="tech_skills_item_text">TypeScript</span>
+            </li>
+            <li class="tech_skills_item">
+              <span class="tech_skills_item_text">React.js</span>
+            </li>
+            <li class="tech_skills_item">
+              <span class="tech_skills_item_text">Webpack</span>
+            </li>
+            <li class="tech_skills_item">
+              <span class="tech_skills_item_text">PHP</span>
+            </li>
+            <li class="tech_skills_item">
+              <span class="tech_skills_item_text">SQL</span>
+            </li>
+          </ul>
+        </div>
+
+        <!-- soft skills -->
+        <div class="sidebar_soft_skills">
+          <h3 class="sidebar_section_title">Soft Skills</h3>
+          <ul class="soft_skills_list">
+            <li class="soft_skills_item">
+              <span class="soft_skills_item_text">purposefulness</span>
+            </li>
+            <li class="soft_skills_item">
+              <span class="soft_skills_item_text">Agile</span>
+            </li>
+            <li class="soft_skills_item">
+              <span class="soft_skills_item_text">GTD</span>
+            </li>
+            <li class="soft_skills_item">
+              <span class="soft_skills_item_text">Teamwork</span>
+            </li>
+          </ul>
         </div>
       </div>
     </aside>
