--- a/index.html
+++ b/index.html
@@ -82,64 +82,15 @@
         <!-- company 1 -->
         <div class="work_experience_block">
           <h4 class="work_experience_position">
-            Front-End Developer <span>Freelance</span>
+            My own projects on github <span>Self-education</span>
           </h4>
           <p class="work_experience_period">
-            September 2019 - up to now <span>|</span> Country
+            September 2019 - up to now <span>|</span> Ukraine
           </p>
           <ul class="work_experience_duties">
             <li class="work_experience_duty">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-              aliqua.
-            </li>
-            <li class="work_experience_duty">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            </li>
-            <li class="work_experience_duty">
-              Risus commodo viverra maecenas.
-            </li>
-            <li class="work_experience_duty">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.
-            </li>
-          </ul>
-        </div>
-        <!-- company 2 -->
-        <div class="work_experience_block">
-          <h4 class="work_experience_position">
-            Manager <span>Roga & Kopyta New</span>
-          </h4>
-          <p class="work_experience_period">
-            March 2015 - October 2018 <span>|</span> Country
-          </p>
-          <ul class="work_experience_duties">
-            <li class="work_experience_duty">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod labore et dolore magna aliqua.
-            </li>
-            <li class="work_experience_duty">
-              Quis ipsum suspendisse ultrices gravida.
-            </li>
-            <li class="work_experience_duty">
-              Risus commodo viverra maecenas.
-            </li>
-          </ul>
-        </div>
-        <!-- company 3 -->
-        <div class="work_experience_block">
-          <h4 class="work_experience_position">
-            Manager <span>Roga & Kopyta LLC</span>
-          </h4>
-          <p class="work_experience_period">
-            June 2014 - February 2015 <span>|</span> Country
-          </p>
-          <ul class="work_experience_duties">
-            <li class="work_experience_duty">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            </li>
-            <li class="work_experience_duty">
-              Quis ipsum suspendisse ultrices gravida.
-            </li>
-            <li class="work_experience_duty">
-              Risus commodo viverra maecenas.
+              My works in github (<a href="https://github.com/viktor-gif">https://github.com/viktor-gif</a>) 
+              and beyond.
             </li>
           </ul>
         </div>
@@ -203,9 +154,6 @@
             </li>
             <li class="tech_skills_item">
               <span class="tech_skills_item_text">React.js</span>
-            </li>
-            <li class="tech_skills_item">
-              <span class="tech_skills_item_text">Webpack</span>
             </li>
             <li class="tech_skills_item">
               <span class="tech_skills_item_text">PHP</span>
