--- a/index.html
+++ b/index.html
@@ -53,22 +53,36 @@
         <ol class="my_projects_list">
           <li class="my_projects_item">
             <span class="my_projects_text">
+            <a class="my_projects_link" href="https://viktor-gif.github.io/odigo">https://viktor-gif.github.io/odigo</a>
+            ............................
+            <span class="my_projects_bracket">[</span> ReactJS, HTML5, CSS3 <span class="my_projects_bracket">]</span>
+            </span>
+          </li>
+          <li class="my_projects_item">
+            <span class="my_projects_text">
             <a class="my_projects_link" href="https://viktor-gif.github.io/react-creativia">https://viktor-gif.github.io/react-creativia</a>
-            .........................
+            ........
             <span class="my_projects_bracket">[</span> ReactJS, HTML5, CSS3 <span class="my_projects_bracket">]</span>
             </span>
           </li>
           <li class="my_projects_item">
             <span class="my_projects_text">
             <a class="my_projects_link" href="https://viktor-gif.github.io/viktor-gif-react">https://viktor-gif.github.io/viktor-gif-react</a>
-            ........................
+            ......
+            <span class="my_projects_bracket">[</span> ReactJS <span class="my_projects_bracket">]</span>
+            </span>
+          </li>
+          <li class="my_projects_item">
+            <span class="my_projects_text">
+            <a class="my_projects_link" href="https://viktor-gif.github.io/RxJS-learn">https://viktor-gif.github.io/RxJS-learn</a>
+            ................
             <span class="my_projects_bracket">[</span> ReactJS <span class="my_projects_bracket">]</span>
             </span>
           </li>
           <li class="my_projects_item">
             <span class="my_projects_text">
             <a class="my_projects_link" href="https://viktor-gif.github.io/mogo">https://viktor-gif.github.io/mogo</a>
-            .............................................
+            ...........................
             <span class="my_projects_bracket">[</span> HTML5, CSS3 <span class="my_projects_bracket">]</span>
             </span>
           </li>
